# solox-amp-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  fel4.toml
m4-firmware/: Cargo.toml  build
m4-firmware/.cargo/: config
m4-firmware/rpmsg-lite/: Cargo.toml  README.md
m4-firmware/rpmsg-lite/src/: env.rs  lib.rs  mu.rs  platform.rs
m4-firmware/src/: bsp.rs  main.rs
m4_firmware/: .gitignore  memory.x
m4_firmware/.cargo/: config
patches/: elfloader-tool.patch  kernel.patch
scripts/: apply-patches  hard-reset-submodules
sel4twinkle-alloc/: Cargo.toml
sel4twinkle-alloc/src/: allocator.rs  first_stage_allocator.rs  io_map.rs  lib.rs  object_allocator.rs  vka.rs  vka_object.rs  vspace.rs
src/: cpio.rs  devices.rs  fel4_test.rs  lib.rs  macros.rs
svd/: solox_a9.svd
