[package]
name = "solox"
version = "0.0.1"
authors = ["jonlamb-gh <lamb.jon.io@gmail.com>"]

[dependencies]
libsel4-sys = {git = "https://github.com/jonlamb-gh/libsel4-sys.git", branch = "devel"}

[dependencies.wee_alloc]
version = "0.4"
features = ["static_array_backend"]
optional = true

[dependencies.proptest]
version = "0.8.5"
default-features = false
features = ["alloc", "nightly"]
optional = true

[features]
default = []
alloc = ["wee_alloc"]
test = ["alloc", "proptest"]
